--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@supabase/supabase-js": "^2.48.1",
     "@tanstack/react-query": "^5.66.0",
     "@types/react-grid-layout": "^1.3.5",
-    "@uploadcare/react-uploader": "^1.4.0",
+    "@uploadcare/react-uploader": "^1.5.0",
     "@uploadcare/upload-client": "^6.14.2",
     "@upstash/qstash": "^2.7.22",
     "@upstash/redis": "^1.34.4",
@@ -74,8 +74,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.6",
+    "eslint": "^9.20.1",
+    "eslint-config-next": "15.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "openapi-typescript": "^7.6.1",
@@ -83,6 +83,8 @@
     "supabase": "^2.9.6",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/parser": "^8.24.1"
   }
 }
