--- a/package.json
+++ b/package.json
@@ -74,6 +74,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/parser": "^8.24.1",
     "eslint": "^9.20.1",
     "eslint-config-next": "15.1.7",
     "jest": "^29.7.0",
@@ -83,8 +85,6 @@
     "supabase": "^2.9.6",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5",
-    "@typescript-eslint/eslint-plugin": "^8.24.1",
-    "@typescript-eslint/parser": "^8.24.1"
+    "typescript": "^5"
   }
 }
