--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^4.0.0",
     "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-hover-card": "^1.1.6",
@@ -29,6 +31,7 @@
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
@@ -36,6 +39,7 @@
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.48.1",
     "@tanstack/react-query": "^5.66.0",
+    "@tanstack/react-table": "^8.21.2",
     "@types/react-grid-layout": "^1.3.5",
     "@uploadcare/react-uploader": "^1.5.0",
     "@uploadcare/upload-client": "^6.14.2",
@@ -56,7 +60,9 @@
     "react-dom": "^19.0.0",
     "react-grid-layout": "^1.5.0",
     "react-hook-form": "^7.54.2",
-    "tailwind-merge": "^3.0.1",
+    "recharts": "^2.15.1",
+    "swr": "^2.3.2",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "tree": "^0.1.3",
     "uuid": "^11.0.5",
