--- a/package.json
+++ b/package.json
@@ -94,8 +94,12 @@
     "typescript": "^5"
   },
   "jest": {
-    "setupFiles": ["<rootDir>/jest.env.js"],
-    "setupFilesAfterEnv": ["<rootDir>/jest.setup.ts"],
+    "setupFiles": [
+      "<rootDir>/jest.env.js"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest.setup.ts"
+    ],
     "testEnvironment": "jest-environment-jsdom",
     "moduleNameMapper": {
       "^@/(.*)$": "<rootDir>/src/$1",
@@ -106,7 +110,10 @@
     "testMatch": [
       "**/__tests__/**/*.test.[jt]s?(x)"
     ],
-    "moduleDirectories": ["node_modules", "<rootDir>/"],
+    "moduleDirectories": [
+      "node_modules",
+      "<rootDir>/"
+    ],
     "transform": {
       "^.+\\.(t|j)sx?$": [
         "@swc/jest",
