--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^4.0.0",
+    "@internationalized/date": "^3.7.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -60,6 +61,7 @@
     "react-dom": "^19.0.0",
     "react-grid-layout": "^1.5.0",
     "react-hook-form": "^7.54.2",
+    "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
     "swr": "^2.3.2",
     "tailwind-merge": "^3.0.2",
