--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react": "^19.0.0",
     "react-day-picker": "^9.4.3",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^5.0.0",
     "react-grid-layout": "^1.5.0",
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
