--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.0",
     "lucide-react": "^0.474.0",
-    "next": "15.1.6",
+    "next": "^15.2.4",
     "react": "^19.0.0",
     "react-day-picker": "^9.4.3",
     "react-dom": "^19.0.0",
@@ -92,6 +92,7 @@
     "eslint-config-next": "15.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "ngrok": "^5.0.0-beta.2",
     "openapi-typescript": "^7.6.1",
     "postcss": "^8",
     "supabase": "^2.9.6",
