--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,12 +10,17 @@
     "theme_color": "#ffffff",
     "icons": [
       {
-        "src": "/android-chrome-192x192.png",
+        "src": "/apple-touch-icon.png",
+        "sizes": "180x180",
+        "type": "image/png"
+      },
+      {
+        "src": "/apple-touch-icon.png",
         "sizes": "192x192",
         "type": "image/png"
       },
       {
-        "src": "/android-chrome-512x512.png",
+        "src": "/apple-touch-icon.png",
         "sizes": "512x512",
         "type": "image/png"
       }
