fix: resolve redirect loop and improve PWA experience
- Fixed redirect loop by disabling middleware www to non-www redirects
- Removed HTTP to HTTPS redirects in next.config.ts
- Updated Open Graph URL to non-www domain
- Changed PWA display mode to fullscreen
- Added maskable icon support
- Changed iOS status bar style to black-translucent
- Modified start_url to track PWA installs

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,29 +1,31 @@
 {
-    "name": "Connect by Purelight",
-    "short_name": "Connect",
-    "description": "Everything You Need In One Place",
-    "start_url": "/",
-    "scope": "/",
-    "display": "standalone",
-    "orientation": "portrait-primary",
-    "background_color": "#ffffff",
-    "theme_color": "#ffffff",
-    "icons": [
-      {
-        "src": "/apple-touch-icon.png",
-        "sizes": "180x180",
-        "type": "image/png"
-      },
-      {
-        "src": "/apple-touch-icon.png",
-        "sizes": "192x192",
-        "type": "image/png"
-      },
-      {
-        "src": "/apple-touch-icon.png",
-        "sizes": "512x512",
-        "type": "image/png"
-      }
-    ]
-  }
-  
+  "name": "Connect by Purelight",
+  "short_name": "Connect",
+  "description": "Everything You Need In One Place",
+  "start_url": "/?source=pwa",
+  "scope": "/",
+  "display": "fullscreen",
+  "orientation": "portrait",
+  "background_color": "#ffffff",
+  "theme_color": "#ffffff",
+  "icons": [
+    {
+      "src": "/connect.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/apple-touch-icon.png",
+      "sizes": "180x180",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/apple-touch-icon.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
+    }
+  ]
+}
