--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "framer-motion": "^12.4.0",
     "lucide-react": "^0.474.0",
     "next": "^15.2.4",
+    "next-pwa": "^5.6.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.4.3",
     "react-dom": "^19.0.0",
