--- a/package.json
+++ b/package.json
@@ -58,8 +58,11 @@
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.0",
     "lucide-react": "^0.474.0",
+    "mammoth": "^1.9.0",
     "next": "^15.2.4",
     "next-pwa": "^5.6.0",
+    "openai": "^4.94.0",
+    "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
     "react-day-picker": "^9.4.3",
     "react-dom": "^19.0.0",
@@ -71,6 +74,7 @@
     "swr": "^2.3.2",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "tesseract.js": "^6.0.1",
     "tree": "^0.1.3",
     "uuid": "^11.0.5",
     "zod": "^3.24.1"
