--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint . ",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@date-fns/tz": "^1.2.0",
@@ -78,7 +79,8 @@
     "tesseract.js": "^6.0.1",
     "tree": "^0.1.3",
     "uuid": "^11.0.5",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "patch-package": "^8.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
