--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^4.0.0",
     "@internationalized/date": "^3.7.0",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -64,6 +65,7 @@
     "next": "^15.2.4",
     "next-pwa": "^5.6.0",
     "openai": "^4.94.0",
+    "patch-package": "^8.0.0",
     "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
     "react-day-picker": "^9.4.3",
@@ -71,7 +73,9 @@
     "react-error-boundary": "^5.0.0",
     "react-grid-layout": "^1.5.0",
     "react-hook-form": "^7.54.2",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.7",
+    "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.1",
     "swr": "^2.3.2",
     "tailwind-merge": "^3.0.2",
@@ -79,8 +83,7 @@
     "tesseract.js": "^6.0.1",
     "tree": "^0.1.3",
     "uuid": "^11.0.5",
-    "zod": "^3.24.1",
-    "patch-package": "^8.0.0"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -93,6 +96,7 @@
     "@types/node": "^20.17.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
