--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@uploadcare/upload-client": "^6.14.2",
     "@upstash/qstash": "^2.7.22",
     "@upstash/redis": "^1.34.4",
+    "@vimeo/player": "^2.29.0",
     "@vimeo/vimeo": "^3.0.3",
     "airtable": "^0.12.2",
     "class-variance-authority": "^0.7.1",
@@ -98,6 +99,7 @@
     "@types/react-dom": "^19",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/uuid": "^10.0.0",
+    "@types/vimeo__player": "^2.18.3",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
     "eslint": "^9.20.1",
